@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-11T08:11:10Z",
-  "count" : 1,
-  "count_minmax" : [ 0, 1 ],
+  "timestamp" : "2022-05-12T00:39:14Z",
+  "count" : 81,
+  "count_minmax" : [ 0, 81 ],
   "count_prev_day_inc" : 3,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
