@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-11T08:11:10Z",
+  "timestamp" : "2022-05-12T00:39:14Z",
   "count_outdated" : 1050,
   "uniques_outdated" : 67,
-  "count" : 1439,
+  "count" : 1519,
   "uniques" : 79,
   "views" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 81,
+      "count_minmax": [ 0, 81 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
